# comments_task

./: .env.dist  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
comments/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
dzen/: apps.py  emails.py  forms.py  models.py  serializers.py  tests.py  views.py
dzen/management/commands/: delete_comments.py  insert_comments.py
dzen/migrations/: 0001_initial.py  0002_comment_main_comment.py  0003_alter_comment_home_page.py  0004_remove_comment_main_comment_comment_parent.py  0005_rename_parent_comment_main_comment.py  0006_comment_created_at_comment_updated_at.py  0007_comment_attachment.py
dzen/templates/: base.html  comment_tree.html  index.html
